--- a/KwikMedical.HospitalView/App.xaml
+++ b/KwikMedical.HospitalView/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:KwikMedical.HospitalView"
-             StartupUri="MainWindow.xaml">
+             StartupUri="HospitalWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
